# dreamd

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GUIDE.md  Justfile  LICENSE  NOTICE  PERF.md  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  SKILL.md  SPEC.md  STORY_IDS.md  deny.toml  llms-full.txt  llms.txt  mcp_tool.py  partner-one-pager.md  test_mcp.py
.agent/episodic/: AGENT_LEARNINGS.jsonl
.claude/skills/alpha-test/: SKILL.md
.githooks/: pre-commit  pre-push
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  rfc.md
.github/workflows/: ci.yml  mcp-manifest.yml  nightly.yml  release.yml
.zed/: settings.json
adapters/aider/: CONVENTIONS.md.template  README.md
adapters/claude-code/: AGENTS.md.snippet  README.md
adapters/cline/: .mcp.json.example  README.md
adapters/cursor/: .mcp.json.example  .mcp.json.global.example  README.md
adapters/cursor/.cursor/rules/: dreamd-recall.mdc
crates/dreamd-cli/: Cargo.toml  build.rs
crates/dreamd-cli/src/: cli.rs  lib.rs  main.rs
crates/dreamd-cli/src/commands/: archive.rs  doctor.rs  dream.rs  init.rs  mcp.rs  migrate.rs  mod.rs  recall.rs  reset.rs  score.rs  status.rs  version.rs  watch.rs
crates/dreamd-cli/tests/: README.md  cli_dispatch.rs  cli_help.rs  dream_doctor_discover.rs  init_golden.rs  mcp_stdin_eof.rs  reset_workspace.rs  uninstall.rs  version_output.rs
crates/dreamd-cli/tests/snapshots/: cli_help__archive_help.snap  cli_help__doctor_help.snap  cli_help__dream_help.snap  cli_help__init_help.snap  cli_help__mcp_help.snap  cli_help__migrate_help.snap  cli_help__recall_help.snap  cli_help__reset_help.snap  cli_help__reset_workspace_help.snap  cli_help__score_help.snap  cli_help__status_help.snap  cli_help__top_level_help.snap  cli_help__version_help.snap  cli_help__version_long.snap  cli_help__version_short.snap  cli_help__watch_help.snap
crates/dreamd-core/: Cargo.toml
crates/dreamd-core/benches/: recall.rs
crates/dreamd-core/src/: autobiography.rs  client.rs  collector.rs  config.rs  consolidation.rs  coordinator.rs  daemon_client.rs  decay.rs  dream_cycle.rs  episodic.rs  index.rs  io.rs  layout.rs  lessons.rs  lib.rs  migrate.rs  observability.rs  privacy.rs  redaction.rs  registry.rs  salience.rs  test_support.rs  wal.rs
crates/dreamd-core/src/ingress/: learn.rs  mod.rs  recall.rs  wire.rs
crates/dreamd-core/src/mcp/: mod.rs
crates/dreamd-core/src/server/: http.rs  index_map.rs  lifecycle.rs  mod.rs  project_resource_map.rs  supervisor_map.rs  tantivy_handle.rs  uds.rs  uds_server.rs  watch.rs
crates/dreamd-core/src/server/http/: mod.rs  router.rs  state.rs  tests.rs  types.rs
crates/dreamd-core/src/server/http/handlers/: dream.rs  health.rs  learn.rs  mod.rs  preferences.rs  recall.rs
crates/dreamd-core/src/snapshots/: dreamd_core__collector__tests__recall_snapshot.snap
crates/dreamd-core/tests/: bm25_fastfield_integration.rs  dream_cycle_snapshot.rs  episodic_scan_proptest.rs  salience_proptest.rs  weg12_concurrency_torture.rs  weg21_writer_process.rs  weg268_sigterm_socket.rs  weg60_wal_recovery_startup.rs
crates/dreamd-core/tests/snapshots/: dream_cycle_snapshot__lessons_md.snap  dream_cycle_snapshot__recurrence_counts.snap  dream_cycle_snapshot__state_json.snap
crates/dreamd-protocol/: Cargo.toml
crates/dreamd-protocol/src/: lib.rs
crates/dreamd-protocol/tests/: roundtrip_proptest.rs
doc/: dreamd.1
docs/: README.md  adapters.md  architecture.md  ci.md  compared.md  configuration.md  glossary.md  http-api.md  marketing.md  migrate.md  operator-handbook.md  security.md  troubleshooting.md  v0.1.1-scope.md  windows.md
docs/architecture/: durability.md  tantivy-migration.md
docs/spikes/: dr-014-cline-mcp.md  show-hn-v01.md
examples/: .gitignore  README.md
examples/crash-recovery/: README.md
examples/crash-recovery/.agent/.dreamd/: dream_in_progress.wal  state.json
examples/crash-recovery/.agent/episodic/: AGENT_LEARNINGS.jsonl  AGENT_LEARNINGS.jsonl.tmp
examples/cross-project/: README.md
examples/cross-project/project-alpha/: Cargo.toml
examples/cross-project/project-alpha/.agent/episodic/: AGENT_LEARNINGS.jsonl
examples/cross-project/project-beta/: package.json
examples/cross-project/project-beta/.agent/episodic/: AGENT_LEARNINGS.jsonl
examples/multi-harness/: README.md
examples/multi-harness/.agent/episodic/: AGENT_LEARNINGS.jsonl
examples/multi-harness/.agent/semantic/: LESSONS.md  recurrence_counts.json
examples/multi-harness/.agent/working/: WORKSPACE.md
examples/pinned-events/: README.md
examples/pinned-events/.agent/episodic/: AGENT_LEARNINGS.jsonl
examples/solo-rust-dev/: README.md
examples/solo-rust-dev/.agent/episodic/: AGENT_LEARNINGS.jsonl
examples/solo-rust-dev/.agent/personal/: README.md
examples/solo-rust-dev/.agent/semantic/: LESSONS.md
scripts/: check-npx-floating.sh  coverage.sh  generate-man.sh  idle-rss.sh  update-mcp-manifest.sh
scripts/alpha/: README.md  alpha-suite.sh  mcp_driver.py  quality-suite.sh  quality_check.py  quality_judge.py
scripts/benchmark/: README.md  run_bakeoff.sh  state_drift_bench.py
tests/: README.md
tests/fixtures/: init.golden.txt  init.quiet.golden.txt  init.quiet.rerun.golden.txt  init.rerun.golden.txt
tests/fixtures/demo-corpus/: EXPECTED.md  README.md
tests/fixtures/demo-corpus/.agent/episodic/: AGENT_LEARNINGS.jsonl
tests/fixtures/dream-cycle-snapshot/: AGENT_LEARNINGS.jsonl
