[workspace]
resolver = "2"
members = [
    "crates/dreamd-core",
    "crates/dreamd-cli",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/botzrDev/dreamd"
authors = ["Austin Green <austin@botzr.com>"]
readme = "README.md"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
insta = { version = "1", features = ["filters"] }
