[workspace]
resolver = "2"
members = [
    "crates/dreamd-core",
    "crates/dreamd-cli",
    "crates/dreamd-protocol",
]

[workspace.package]
# RC: 0.1.0-rc.5. GA drops the -rc.N pre-release suffix (DR-009).
version = "0.1.0-rc.5"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/botzrDev/dreamd"
authors = ["Austin Green <austin@botzr.com>"]
readme = "README.md"

[workspace.lints.rust]
# dreamd handles user data and secrets (auth.json, AGENT_LEARNINGS.jsonl);
# unsafe code is forbidden project-wide to eliminate an entire class of
# memory-safety bugs from the codebase.
unsafe_code = "forbid"

[workspace.dependencies]
# Shared across crates for snapshot testing (WEG-20). The "filters" feature
# enables redaction of build-specific values (SHA, date, target triple).
insta = { version = "1", features = ["filters"] }
# MCP SDK — server-side tooling + stdin/stdout transport for `dreamd mcp` (WEG-77).
# Implements MCP spec 2025-11-25. Pinned to exact version; no crate adds this
# directly until the mcp subcommand is wired.
rmcp = { version = "1.7.0", features = ["server", "transport-io"] }
