[package]
name = "dreamd"
description = "Portable memory layer for AI coding agents — pre-release"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true

[[bin]]
name = "dreamd"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
dreamd-core = { path = "../dreamd-core", version = "0.0.0" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
