[package]
name = "dreamd"
description = "Portable memory layer for AI coding agents — pre-release"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true

[[bin]]
name = "dreamd"
path = "src/main.rs"

[[bin]]
name = "generate_man"
path = "src/bin/generate_man.rs"
doc = false

[lints]
workspace = true

[dependencies]
dreamd-core = { path = "../dreamd-core", version = "0.1.0-rc.2" }
chrono = { version = "0.4" }
clap = { version = "4", features = ["derive"] }
clap_mangen = "0.2"
const_format = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
# WEG-63 — autobiography best-effort error logging in CLI dream command.
# Already resolved transitively via dreamd-core (0.1.44 in Cargo.lock).
tracing = "0.1"
# The CLI crate provides the binary entry point and needs the full multi-threaded
# runtime to power the axum server and concurrent memory coordinator tasks.
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[build-dependencies]
vergen-gitcl = { version = "1", features = ["build", "cargo", "rustc"] }
# Pin vergen to 9.0.6: vergen-gitcl 1.0.8 re-exports `Emitter` from vergen-lib
# 0.1.6 but its build/cargo/rustc feature flags route through `vergen`. Newer
# vergen 9.1+ depends on vergen-lib 9.1, which trips a duplicate-vergen-lib
# trait mismatch at the `add_instructions` call sites. 9.0.6 still uses
# vergen-lib 0.1.6 and resolves cleanly.
vergen = "=9.0.6"

[dev-dependencies]
tempfile = "3"
insta = { workspace = true }
