[package]
name = "dreamd-core"
description = "Core engine for dreamd: storage, indexing, and dream consolidation."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# Local lints override workspace inheritance because WEG-21 needs
# `nix::unistd::fork`, which is `unsafe fn` (kernel state ownership across
# the parent/child boundary requires the caller assert async-signal safety).
# The workspace-wide `unsafe_code = "forbid"` is intentionally scoped down to
# `deny` here so the SINGLE call site in `server::lifecycle::detach_double_fork`
# can carry a `#[allow(unsafe_code)]` attribute with a documented safety
# contract. No other module in this crate is permitted to use unsafe — the
# `deny` level still surfaces violations at compile time.
[lints.rust]
unsafe_code = "deny"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
# `sync` for mpsc/oneshot (coordinator actor channel), `rt` + `macros` for
# the WEG-21 test helper binary's `tokio::runtime::Builder::new_current_thread`
# entry point and any future caller of `server::run` that constructs its own
# runtime. Multi-threaded runtime still lives in the consuming CLI crate.
tokio = { version = "1", default-features = false, features = ["sync", "rt", "macros"] }
dreamd-protocol = { path = "../dreamd-protocol" }
serde_json = "1"
thiserror = "1"
ulid = "1"
lru = "0.12"
# WEG-24 spike-only. Reached by `tests/bin/tantivy_spike.rs` (a `[[bin]]`
# target with `test = false, bench = false, doc = false`). Library code does
# NOT use tantivy yet — that's WEG-41. Living here is a cargo-mechanics
# necessity: `[[bin]]` targets don't see `[dev-dependencies]`.
tantivy = "0.26"

[target.'cfg(unix)'.dependencies]
# WEG-21 / DR-118 — double-fork (fork + setsid) for writer-process daemonization,
# and SO_PEERCRED setup downstream. Unix-only; no Windows path until DR-121.
nix = { version = "0.29", default-features = false, features = ["process", "fs", "user"] }

[dev-dependencies]
# Tests need the async runtime (rt), test macro, and time facilities
# that production code intentionally excludes.
tokio = { version = "1", default-features = false, features = ["rt", "macros", "sync", "time"] }
tempfile = "3"
# WEG-24 measurement spike: tantivy IndexWriter open-cost / multi-process
# reload / lock-cleanup-under-SIGKILL benchmark. Forced into the main
# [dependencies] table below because `[[bin]]` targets in a library crate do
# NOT inherit `[dev-dependencies]` (see drift catalog
# `tokio-feature-split-bin-target-exception` and `test-helper-bin-pattern`).
# This does NOT mean tantivy ships in the library — the `tantivy_spike`
# binary is flagged `test = false, bench = false, doc = false` and never
# linked into any release artifact. WEG-41 will properly integrate tantivy
# (likely behind a feature) once the indexing module lands.

# WEG-21 integration test spawns two helper processes and asserts the first
# binds the socket as writer-process while the second connects as client. The
# helper is compiled only when tests run; not shipped in any release artifact.
[[bin]]
name = "weg21_uds_helper"
path = "tests/bin/weg21_uds_helper.rs"
test = false
bench = false
doc = false

# WEG-24 measurement spike binary. Re-execs itself for cold-open and
# multi-process reader / writer-stall measurements. Dev-only, never shipped.
[[bin]]
name = "tantivy_spike"
path = "tests/bin/tantivy_spike.rs"
test = false
bench = false
doc = false
