[package]
name = "dreamd-core"
description = "Core engine for dreamd: storage, indexing, and dream consolidation."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# Local lints override workspace inheritance because WEG-21 needs
# `nix::unistd::fork`, which is `unsafe fn` (kernel state ownership across
# the parent/child boundary requires the caller assert async-signal safety).
# The workspace-wide `unsafe_code = "forbid"` is intentionally scoped down to
# `deny` here so the SINGLE call site in `server::lifecycle::detach_double_fork`
# can carry a `#[allow(unsafe_code)]` attribute with a documented safety
# contract. No other module in this crate is permitted to use unsafe — the
# `deny` level still surfaces violations at compile time.
[lints.rust]
unsafe_code = "deny"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
# `sync` for mpsc/oneshot (coordinator actor channel), `rt` + `macros` for
# the WEG-21 test helper binary's `tokio::runtime::Builder::new_current_thread`
# entry point and any future caller of `server::run` that constructs its own
# runtime, `time` for the WEG-42 indexer's commit-cadence ticker
# (`tokio::time::interval` + `MissedTickBehavior::Skip`). Multi-threaded
# runtime still lives in the consuming CLI crate.
tokio = { version = "1", default-features = false, features = ["sync", "rt", "macros", "time", "net", "io-util"] }
dreamd-protocol = { path = "../dreamd-protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
ulid = "1"
lru = "0.12"
# WEG-49 (DR-210) startup manifest gate emits structured warn! lines for
# Absent / NeedsMigration outcomes. Per-crate only — no workspace promotion
# until a second consumer appears (WEG-41-A drift catalog entry).
tracing = "0.1"
# Tantivy 0.26 — promoted to a real library dependency by WEG-42 (DR-202).
# `server::tantivy_handle::TantivyIndexHandle` opens the per-project index,
# runs startup replay, and drives the 5-second commit cadence. The WEG-24
# spike binary (`tests/bin/tantivy_spike.rs`, `test = false, bench = false,
# doc = false`) continues to reach this dep; living in `[dependencies]`
# (not `[dev-dependencies]`) is also the WEG-24 cargo-mechanics necessity
# because `[[bin]]` targets in a library crate do not inherit dev-deps.
# Version pin stays at "0.26" (resolved 0.26.1 in Cargo.lock); no bump.
tantivy = "0.26"
# WEG-43 salience collector — `OrderedFloat<f64>` for the BinaryHeap
# `Ord` impl (f64 alone is only `PartialOrd`). Pin at "5" to match the
# version already resolved transitively via tantivy (5.3.0 in Cargo.lock),
# avoiding a duplicate compilation of the 4.x line.
ordered-float = "5"
# WEG-14 / DR-112 config loader. figment with the `toml` feature owns the
# layered precedence (defaults → user → project, later merge wins). `dirs`
# resolves the platform user-config dir (XDG `~/.config/` on Linux). Both
# are new direct deps in this crate (workspace has no
# `[workspace.dependencies]` for them; lockfile had no prior resolution),
# greenlit before add.
figment = { version = "0.10", features = ["toml"] }
dirs = "5"
toml = "0.8"
# MCP server for `dreamd mcp` (WEG-77). Workspace dep — features ["server",
# "transport-io"] pull in schemars; `macros` feature is on by default so
# #[tool] / #[tool_router] / #[tool_handler] are available without an explicit
# feature flag.
rmcp = { workspace = true }
# schemars is pulled transitively by rmcp (1.2.1 in Cargo.lock); listed as a
# direct dep so #[derive(JsonSchema)] proc-macro can resolve the crate name.
# Pin to "1" to match the resolved major already in the lockfile.
schemars = "1"

[target.'cfg(unix)'.dependencies]
# WEG-21 / DR-118 — double-fork (fork + setsid) for writer-process daemonization,
# and SO_PEERCRED setup downstream. Unix-only; no Windows path until DR-121.
nix = { version = "0.29", default-features = false, features = ["process", "fs", "user"] }

[dev-dependencies]
# Tests need the async runtime (rt), test macro, and time facilities
# that production code intentionally excludes.
tokio = { version = "1", default-features = false, features = ["rt", "macros", "sync", "time"] }
tempfile = "3"
# WEG-43 snapshot test for the salience collector. Uses the workspace pin
# (`insta = { version = "1", features = ["filters"] }`) so all snapshot
# tests across the workspace share one major-version line.
insta = { workspace = true }
# WEG-24 measurement spike: tantivy IndexWriter open-cost / multi-process
# reload / lock-cleanup-under-SIGKILL benchmark. Forced into the main
# [dependencies] table below because `[[bin]]` targets in a library crate do
# NOT inherit `[dev-dependencies]` (see drift catalog
# `tokio-feature-split-bin-target-exception` and `test-helper-bin-pattern`).
# This does NOT mean tantivy ships in the library — the `tantivy_spike`
# binary is flagged `test = false, bench = false, doc = false` and never
# linked into any release artifact. WEG-41 will properly integrate tantivy
# (likely behind a feature) once the indexing module lands.

# WEG-21 integration test spawns two helper processes and asserts the first
# binds the socket as writer-process while the second connects as client. The
# helper is compiled only when tests run; not shipped in any release artifact.
[[bin]]
name = "weg21_uds_helper"
path = "tests/bin/weg21_uds_helper.rs"
test = false
bench = false
doc = false

# WEG-24 measurement spike binary. Re-execs itself for cold-open and
# multi-process reader / writer-stall measurements. Dev-only, never shipped.
[[bin]]
name = "tantivy_spike"
path = "tests/bin/tantivy_spike.rs"
test = false
bench = false
doc = false
