[package]
name = "dreamd-core"
description = "Core engine for dreamd: storage, indexing, and dream consolidation."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# Local lints override workspace inheritance because WEG-21 needs
# `nix::unistd::fork`, which is `unsafe fn` (kernel state ownership across
# the parent/child boundary requires the caller assert async-signal safety).
# The workspace-wide `unsafe_code = "forbid"` is intentionally scoped down to
# `deny` here so the SINGLE call site in `server::lifecycle::detach_double_fork`
# can carry a `#[allow(unsafe_code)]` attribute with a documented safety
# contract. No other module in this crate is permitted to use unsafe — the
# `deny` level still surfaces violations at compile time.
[lints.rust]
unsafe_code = "deny"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
# `sync` for mpsc/oneshot (coordinator actor channel), `rt` + `macros` for
# the WEG-21 test helper binary's `tokio::runtime::Builder::new_current_thread`
# entry point and any future caller of `server::run` that constructs its own
# runtime, `time` for the WEG-42 indexer's commit-cadence ticker
# (`tokio::time::interval` + `MissedTickBehavior::Skip`). Multi-threaded
# runtime still lives in the consuming CLI crate.
tokio = { version = "1", default-features = false, features = ["sync", "rt", "macros", "time", "net", "io-util", "signal"] }
dreamd-protocol = { path = "../dreamd-protocol", version = "0.1.0-rc.2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
ulid = "1"
lru = "0.16"
# WEG-49 (DR-210) startup manifest gate emits structured warn! lines for
# Absent / NeedsMigration outcomes. Per-crate only — no workspace promotion
# until a second consumer appears (WEG-41-A drift catalog entry).
tracing = "0.1"
# WEG-67 / DR-401 — Axum 0.8 HTTP server skeleton. default-features = true
# pulls hyper + tower-service; no explicit tower-http dep until WEG-144.
axum = { version = "0.8", default-features = true }
# Tantivy 0.26 — promoted to a real library dependency by WEG-42 (DR-202).
# `server::tantivy_handle::TantivyIndexHandle` opens the per-project index,
# runs startup replay, and drives the 5-second commit cadence. The WEG-24
# spike binary (`tests/bin/tantivy_spike.rs`, `test = false, bench = false,
# doc = false`) continues to reach this dep; living in `[dependencies]`
# (not `[dev-dependencies]`) is also the WEG-24 cargo-mechanics necessity
# because `[[bin]]` targets in a library crate do not inherit dev-deps.
# Version pin stays at "0.26" (resolved 0.26.1 in Cargo.lock); no bump.
tantivy = "0.26"
# WEG-43 salience collector — `OrderedFloat<f64>` for the BinaryHeap
# `Ord` impl (f64 alone is only `PartialOrd`). Pin at "5" to match the
# version already resolved transitively via tantivy (5.3.0 in Cargo.lock),
# avoiding a duplicate compilation of the 4.x line.
ordered-float = "5"
# WEG-14 / DR-112 config loader. figment with the `toml` feature owns the
# layered precedence (defaults → user → project, later merge wins). `dirs`
# resolves the platform user-config dir (XDG `~/.config/` on Linux). Both
# are new direct deps in this crate (workspace has no
# `[workspace.dependencies]` for them; lockfile had no prior resolution),
# greenlit before add.
figment = { version = "0.10", features = ["toml"] }
dirs = "5"
toml = "0.8"
# MCP server for `dreamd mcp` (WEG-77). Workspace dep — features ["server",
# "transport-io"] pull in schemars; `macros` feature is on by default so
# #[tool] / #[tool_router] / #[tool_handler] are available without an explicit
# feature flag.
rmcp = { workspace = true }
# schemars is pulled transitively by rmcp (1.2.1 in Cargo.lock); listed as a
# direct dep so #[derive(JsonSchema)] proc-macro can resolve the crate name.
# Pin to "1" to match the resolved major already in the lockfile.
schemars = "1"
# WEG-XX redaction module — already resolved transitively via tantivy (1.12.3
# in Cargo.lock), so adding as a direct dep causes no resolution churn.
regex = "1"
# WEG-63 / DR-311 — autobiography commit on dream-cycle completion.
# git2 wraps libgit2 (C); adds ~1-2MB to the stripped binary. WEG-54
# (DR-809 binary size CI gate, 15MB) is the upper bound; current binary
# is 839KB stripped, so the addition is comfortably under.
git2 = "0.21"
# WEG-72 / DR-407 — SO_PEERCRED middleware. `serve_uds` drives hyper-util's
# auto-HTTP connection builder so each accepted UDS stream is served via
# HTTP/1.1 or HTTP/2. Pin to "0.1" to match the 0.1.20 already resolved
# transitively via axum.
hyper-util = { version = "0.1", features = ["server", "http1", "http2"] }
# WEG-259 / DR-506 — Phase 2 HTTP-over-UDS client for the Remote MCP backend.
# hyper 1 (client + http1) drives the per-call `http1::handshake` request path;
# http-body-util + bytes build/collect request and response bodies. All three
# are pinned to the majors already resolved in Cargo.lock (hyper 1.9.0,
# http-body-util 0.1.3, bytes 1.11.1) — no new majors, no extra HTTP client.
hyper = { version = "1", features = ["client", "http1"] }
http-body-util = "0.1"
bytes = "1"

[target.'cfg(unix)'.dependencies]
# WEG-21 / DR-118 — double-fork (fork + setsid) for writer-process daemonization,
# and SO_PEERCRED setup downstream. Unix-only; no Windows path until DR-121.
nix = { version = "0.29", default-features = false, features = ["process", "fs", "user"] }

[dev-dependencies]
# Tests need the async runtime (rt), test macro, and time facilities
# that production code intentionally excludes.
tokio = { version = "1", default-features = false, features = ["rt", "macros", "sync", "time"] }
tempfile = "3"
# WEG-48 / DR-208 — Criterion benchmark harness for recall() latency.
criterion = "0.5"
# WEG-67 — `tower::ServiceExt::oneshot` for axum router unit tests. Pinned
# to "0.5" to match the tower 0.5.3 already resolved transitively via axum.
tower = "0.5"
# WEG-43 snapshot test for the salience collector. Uses the workspace pin
# (`insta = { version = "1", features = ["filters"] }`) so all snapshot
# tests across the workspace share one major-version line.
insta = { workspace = true }
# WEG-24 measurement spike: tantivy IndexWriter open-cost / multi-process
# reload / lock-cleanup-under-SIGKILL benchmark. Forced into the main
# [dependencies] table below because `[[bin]]` targets in a library crate do
# NOT inherit `[dev-dependencies]` (see drift catalog
# `tokio-feature-split-bin-target-exception` and `test-helper-bin-pattern`).
# This does NOT mean tantivy ships in the library — the `tantivy_spike`
# binary is flagged `test = false, bench = false, doc = false` and never
# linked into any release artifact. WEG-41 will properly integrate tantivy
# (likely behind a feature) once the indexing module lands.

[target.'cfg(unix)'.dev-dependencies]
# WEG-268 regression test delivers SIGTERM to a running `dreamd watch` via
# `nix::sys::signal::kill`. The `signal` feature is NOT enabled on the
# production nix dep above (process/fs/user only), so it's a unix-only dev-dep:
# Cargo unifies it into the test build without widening the shipped binary's
# nix surface. Unix-only; Windows lifecycle is WEG-135.
nix = { version = "0.29", default-features = false, features = ["signal"] }

# WEG-21 integration test spawns two helper processes and asserts the first
# binds the socket as writer-process while the second connects as client. The
# helper is compiled only when tests run; not shipped in any release artifact.
[[bin]]
name = "weg21_uds_helper"
path = "tests/bin/weg21_uds_helper.rs"
test = false
bench = false
doc = false

# WEG-24 measurement spike binary. Re-execs itself for cold-open and
# multi-process reader / writer-stall measurements. Dev-only, never shipped.
[[bin]]
name = "tantivy_spike"
path = "tests/bin/tantivy_spike.rs"
test = false
bench = false
doc = false

# WEG-268 regression test spawns this helper, waits for it to bind the UDS
# socket, then delivers SIGTERM and asserts the socket is unlinked. Runs the
# real `run_watch`; compiled only when tests run, never shipped.
[[bin]]
name = "weg268_watch_helper"
path = "tests/bin/weg268_watch_helper.rs"
test = false
bench = false
doc = false

# WEG-48 / DR-208 — Criterion benchmarks for recall() at n=1k/10k/100k.
# `harness = false` is required for Criterion (it provides its own main).
[[bench]]
name = "recall"
harness = false
