[package]
name = "dreamd-protocol"
description = "Shared serde types for the dreamd HTTP API and on-disk JSONL records."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
# Dep-discipline policy: protocol owns the parse/validate boundary only.
# Deps stay locked to serde + chrono. ULID minting lives in dreamd-core.
# See ARCHITECTURE.md drift catalog entry "dreamd-protocol deps stay locked".
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
# serde_json is dev-only: protocol defines the shape, not the codec.
# Production serialization happens in dreamd-core's coordinator.
serde_json = "1"
# proptest is test-only (JSONL round-trip property suite, WEG-159). It does NOT
# relax the runtime dep-discipline policy above: runtime deps stay serde+chrono.
# Pinned to major 1; its `rand 0.9` chain already resolves in Cargo.lock, so it
# adds no parallel-major.
proptest = "1"
